[se] update demos